// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DriverCode contains the actualLanguage URL if is auto 1`] = `
<div
  className="bblfsh-header__driver-code-box"
>
  <a
    className="bblfsh-header__driver-code-link"
    href="Python.driver"
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="Driver code repository on GitHub"
      className="bblfsh-header__driver-code-icon"
      src="github.svg"
      title="Driver code repository on GitHub"
    />
  </a>
</div>
`;

exports[`DriverCode contains the driver URL if selectedLanguage is not auto 1`] = `
<div
  className="bblfsh-header__driver-code-box"
>
  <a
    className="bblfsh-header__driver-code-link"
    href="Java.driver"
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="Driver code repository on GitHub"
      className="bblfsh-header__driver-code-icon"
      src="github.svg"
      title="Driver code repository on GitHub"
    />
  </a>
</div>
`;

exports[`Header has the button disabled if canParse is false 1`] = `
<header
  className="bblfsh-header__container"
>
  <h1
    className="bblfsh-header__title"
  >
    <img
      alt="bblfsh"
      className="bblfsh-header__title-image"
      src="babelfish_logo.svg"
    />
    <span
      className="bblfsh-header__app-title"
    >
      Web
    </span>
  </h1>
  <div
    className="bblfsh-header__actions"
  >
    <div
      className="bblfsh-header__input-group"
    >
      <label
        className="bblfsh-header__label"
        htmlFor="language-selector"
      >
        Language
      </label>
      <select
        className="bblfsh-header__select"
        id="language-selector"
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          auto (Python)
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="java"
        >
          Java
        </option>
      </select>
      <div
        className="bblfsh-header__driver-code-box"
      >
        <a
          className="bblfsh-header__driver-code-link"
          href="Python.driver"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Driver code repository on GitHub"
            className="bblfsh-header__driver-code-icon"
            src="github.svg"
            title="Driver code repository on GitHub"
          />
        </a>
      </div>
    </div>
    <div
      className="bblfsh-header__input-group"
    >
      <label
        className="bblfsh-header__label"
        htmlFor="examples-selector"
      >
        Examples
      </label>
      <select
        className="bblfsh-header__select"
        id="examples-selector"
        onChange={[Function]}
      >
        <option
          value=""
        >
          ---
        </option>
        <option
          value="python"
        />
        <option
          value="java"
        />
      </select>
    </div>
    <div
      className="bblfsh-header__input-group"
    >
      <input
        className="bblfsh-header__input"
        onChange={[Function]}
        placeholder="raw gist url"
        type="url"
      />
      <button
        className="bblfsh-header__button"
        disabled={true}
      >
        load
      </button>
      <button
        className="bblfsh-header__button"
        disabled={true}
        onClick={[Function]}
      >
        share
      </button>
    </div>
    <div
      className="bblfsh-header__input-group right"
    >
      <button
        className="bblfsh-header__run-button"
        disabled={true}
        id="run-parser"
      >
        Run parser
      </button>
    </div>
  </div>
</header>
`;

exports[`Header has the button enabled if canParse is true 1`] = `
<header
  className="bblfsh-header__container"
>
  <h1
    className="bblfsh-header__title"
  >
    <img
      alt="bblfsh"
      className="bblfsh-header__title-image"
      src="babelfish_logo.svg"
    />
    <span
      className="bblfsh-header__app-title"
    >
      Web
    </span>
  </h1>
  <div
    className="bblfsh-header__actions"
  >
    <div
      className="bblfsh-header__input-group"
    >
      <label
        className="bblfsh-header__label"
        htmlFor="language-selector"
      >
        Language
      </label>
      <select
        className="bblfsh-header__select"
        id="language-selector"
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          auto (Python)
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="java"
        >
          Java
        </option>
      </select>
      <div
        className="bblfsh-header__driver-code-box"
      >
        <a
          className="bblfsh-header__driver-code-link"
          href="Python.driver"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Driver code repository on GitHub"
            className="bblfsh-header__driver-code-icon"
            src="github.svg"
            title="Driver code repository on GitHub"
          />
        </a>
      </div>
    </div>
    <div
      className="bblfsh-header__input-group"
    >
      <label
        className="bblfsh-header__label"
        htmlFor="examples-selector"
      >
        Examples
      </label>
      <select
        className="bblfsh-header__select"
        id="examples-selector"
        onChange={[Function]}
      >
        <option
          value=""
        >
          ---
        </option>
        <option
          value="python"
        />
        <option
          value="java"
        />
      </select>
    </div>
    <div
      className="bblfsh-header__input-group"
    >
      <input
        className="bblfsh-header__input"
        onChange={[Function]}
        placeholder="raw gist url"
        type="url"
      />
      <button
        className="bblfsh-header__button"
        disabled={true}
      >
        load
      </button>
      <button
        className="bblfsh-header__button"
        disabled={true}
        onClick={[Function]}
      >
        share
      </button>
    </div>
    <div
      className="bblfsh-header__input-group right"
    >
      <button
        className="bblfsh-header__run-button"
        disabled={false}
        id="run-parser"
      >
        Run parser
      </button>
    </div>
  </div>
</header>
`;

exports[`Header renders correctly 1`] = `
<header
  className="bblfsh-header__container"
>
  <h1
    className="bblfsh-header__title"
  >
    <img
      alt="bblfsh"
      className="bblfsh-header__title-image"
      src="babelfish_logo.svg"
    />
    <span
      className="bblfsh-header__app-title"
    >
      Web
    </span>
  </h1>
  <div
    className="bblfsh-header__actions"
  >
    <div
      className="bblfsh-header__input-group"
    >
      <label
        className="bblfsh-header__label"
        htmlFor="language-selector"
      >
        Language
      </label>
      <select
        className="bblfsh-header__select"
        id="language-selector"
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          auto (Java)
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="java"
        >
          Java
        </option>
      </select>
      <div
        className="bblfsh-header__driver-code-box"
      >
        <a
          className="bblfsh-header__driver-code-link"
          href="Java.driver"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Driver code repository on GitHub"
            className="bblfsh-header__driver-code-icon"
            src="github.svg"
            title="Driver code repository on GitHub"
          />
        </a>
      </div>
    </div>
    <div
      className="bblfsh-header__input-group"
    >
      <label
        className="bblfsh-header__label"
        htmlFor="examples-selector"
      >
        Examples
      </label>
      <select
        className="bblfsh-header__select"
        id="examples-selector"
        onChange={[Function]}
      >
        <option
          value=""
        >
          ---
        </option>
        <option
          value="python"
        />
        <option
          value="java"
        />
      </select>
    </div>
    <div
      className="bblfsh-header__input-group"
    >
      <input
        className="bblfsh-header__input"
        onChange={[Function]}
        placeholder="raw gist url"
        type="url"
      />
      <button
        className="bblfsh-header__button"
        disabled={true}
      >
        load
      </button>
      <button
        className="bblfsh-header__button"
        disabled={true}
        onClick={[Function]}
      >
        share
      </button>
    </div>
    <div
      className="bblfsh-header__input-group right"
    >
      <button
        className="bblfsh-header__run-button"
        disabled={true}
        id="run-parser"
      >
        Run parser
      </button>
    </div>
  </div>
</header>
`;
